--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.2
+  build_runner: ^2.4.9
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - lib/assets/
+    - lib/assets/images/
+    - lib/assets/restaurants_data.json
   # fonts:
   #   - family: Schyler
   #     fonts:
