--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,9 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   flutter_rating_bar: ^4.0.0
+  cupertino_icons: ^1.0.2
+  path_provider: ^2.0.15
+  dio: ^5.0.0
 
 dev_dependencies:
   flutter_test:
